Opened 5 years ago

Closed 4 years ago

#16404 closed bug (fixed)

Web+ won't render certain unicode symbols

Reported by: humdinger Owned by: pulkomandy
Priority: normal Milestone: R1/beta3
Component: Applications/WebPositive Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is Beta2.

For example the block "Geometric shapes":

■□▢▣▤▤▤▥▦▧▨▩▪▫▱▲△▶▷▼▽◀◁◆◇◈◉◊○◌◎●◐◑◒◓◢◣◥◦◯

The same in StyledEdit:

Geometric shapes in StyledEdit

In Web+ it looks like between ▫ and ◌ symbols get drawn on top of each other.

Attachments (1)

unicode.png (10.6 KB ) - added by humdinger 5 years ago.
Geometric shapes in StyledEdit

Download all attachments as: .zip

Change History (5)

by humdinger, 5 years ago

Attachment: unicode.png added

Geometric shapes in StyledEdit

comment:1 by nephele, 5 years ago

Looks to be the same issue as https://dev.haiku-os.org/ticket/16213

comment:2 by madmax, 5 years ago

Just noticed that (at least in nightly) if you make those symbols render in StyleEdit or CharacterMap (not Pe, though?), close Web+ and try again, they will be rendered correctly.

comment:3 by pulkomandy, 5 years ago

Now that's interesting. Could it be that not all font drawing path in app_server correctly go through the font fallback and caching?

comment:4 by pulkomandy, 4 years ago

Milestone: UnscheduledR1/beta3
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.